--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -20,7 +20,7 @@
     <p class="fw-normal">This application lists the current number of cases reported across the globe.</p>
 
     <p class="fw-light"> All information you see on this page is taken from this repository
-        <a href="https://github.com/CSSEGISandData/COVID-19">Link</a>
+        <a href="https://github.com/CSSEGISandData/COVID-19" target="_blank">Link</a> <!-- open tab when click on link target="_blank"-->
     </p>
 
 
