icon covid added

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -14,8 +14,9 @@
 <body>
 
 
-<!--<div class="container"> makes margin and padding nice-->
-<div style="text-align:center ;font-weight:bold;font-size:30px" class="shadow p-3 mb-5 bg-white rounded">Coronavirus Tracker Application</div>
+<div style="text-align:left;align-items: center; font-weight:bold;font-size:25px" class="shadow p-3 mb-5 bg-white rounded">Coronavirus Tracker Application
+    <img src="https://flespi.io/covid19/statics/app-logo-128x128.png" class="center" alt="img" style="width:45px;height:45px;float: left;margin:-2px 5px">
+</div>
 
 
 <div class="container">
