--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,17 +9,64 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/creativetimofficial/tailwind-starter-kit/tailwind.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+
+    <link th:href="@{/styles/cssandjs/main.css}" rel="stylesheet"/>
+
 </head>
 
 <body>
 
 
-<div style="text-align:left;align-items: center; font-weight:bold;font-size:25px" class="shadow p-3 mb-5 bg-white rounded">Coronavirus Tracker Application
-    <img src="https://flespi.io/covid19/statics/app-logo-128x128.png" class="center" alt="img" style="width:45px;height:45px;float: left;margin:-2px 5px">
-</div>
+<nav class="navbar navbar-expand-lg navbar-light ">
+
+    <div class="container-fluid shadow p-3 mb-5 bg-white rounded" style="text-align:left;align-items: center; font-weight:bold;font-size:20px">
+        <img src="https://flespi.io/covid19/statics/app-logo-128x128.png" class="center" alt="img" style="width:45px;height:45px;float: left;margin:-2px 5px">
+
+        <a class="navbar-brand" href="#">Coronavirus Tracker Application</a>
+
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+
+
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="#">Home</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="new_cases.html">New cases</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="recovered.html">Recovered</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="dead.html">Dead</a>
+                </li>
+
+            </ul>
+
+            <form class="d-flex">
+                <input class="form-control me-2" id="myInput" type="search" placeholder="Search..." aria-label="Search">
+            </form>
+
+
+    </div>
+</nav>
 
 
 <div class="container">
+
 
     <p class="fw-normal">This application lists the current number of cases reported across the globe.</p>
 
@@ -40,8 +87,6 @@
         <span th:text="${totalNewCases}"></span>
     </div>
 
-    <input class="form-control" id="myInput" type="text" placeholder="Search..">
-    <br>
 
     <table class="table">
         <tr>
