--- a/src/main/resources/templates/cases.html
+++ b/src/main/resources/templates/cases.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <title>Coronavirus Tracker Application</title>
     <meta http-equiv="Content-Type" content="text/html" ; charset="UTF-8"/>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+
 </head>
 
 <body>
 
-<p class="fw-normal">new cases</p>
+<div th:insert="fragments/navbar.html::myNavBar"> </div>
 
+<h1>My First Heading</h1>
+<p>My first paragraph.</p>
 
 </body>
-
-
-</html>
+</html> 
