--- a/src/main/resources/templates/dead.html
+++ b/src/main/resources/templates/dead.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <title>Coronavirus Tracker Application</title>
     <meta http-equiv="Content-Type" content="text/html" ; charset="UTF-8"/>
@@ -9,14 +10,10 @@
 
 <body>
 
-<div class="container-fluid" id="footer">
+<div th:insert="fragments/navbar.html::myNavBar"></div>
 
-</div>
-
-<p class="fw-normal">dead</p>
-
+<h1>My First Heading</h1>
+<p>dead</p>
 
 </body>
-
-
-</html>
+</html> 
