--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,45 +1,47 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/">Trackzilla Menu</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<div th:fragment="myNavBar">
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarAppMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Applications
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarAppMenuLink">
-                    <a class="dropdown-item" href="/applications">View</a>
-                    <a class="dropdown-item" href="/applications/new">Create</a>
-                </div>
+
+<nav class="navbar navbar-expand-lg navbar-light ">
+
+    <div class="container-fluid shadow p-3 mb-5 bg-white rounded" style="text-align:left;align-items: center; font-weight:bold;font-size:20px">
+        <img src="https://flespi.io/covid19/statics/app-logo-128x128.png" class="center" alt="img" style="width:45px;height:45px;float: left;margin:-2px 5px">
+
+        <a class="navbar-brand" href="#">Coronavirus Tracker Application</a>
+
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="/">Home</a>
             </li>
 
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarTcktMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Tickets
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarTcktMenuLink">
-                    <a class="dropdown-item" href="/tickets">View</a>
-                    <a class="dropdown-item" href="/tickets/new">Create</a>
-                </div>
+            <li class="nav-item">
+                <a class="nav-link"  href="/new">Cases</a>
             </li>
 
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarRelMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Releases
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarRelMenuLink">
-                    <a class="dropdown-item" href="/releases">View</a>
-                    <a class="dropdown-item" href="/releases/new">Create</a>
-                </div>
+            <li class="nav-item">
+                <a class="nav-link"  href="/recovered">Recovered</a>
             </li>
 
-
-
+            <li class="nav-item">
+                <a class="nav-link"  href="/dead">Dead</a>
+            </li>
 
         </ul>
 
+        <form class="d-flex">
+            <input class="form-control me-2" id="myInput" type="search" placeholder="Search..." aria-label="Search">
+        </form>
+
+
     </div>
 </nav>
+
+
+
+</div>
