--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -16,14 +16,17 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 
-    <link th:href="@{/styles/cssandjs/main.css}" rel="stylesheet"/>
+
 
 </head>
 
 <body>
 
+<div th:insert="fragments/navbar.html::myNavBar"> </div>
 
-<nav class="navbar navbar-expand-lg navbar-light ">
+
+
+<!--<nav class="navbar navbar-expand-lg navbar-light">
 
     <div class="container-fluid shadow p-3 mb-5 bg-white rounded" style="text-align:left;align-items: center; font-weight:bold;font-size:20px">
         <img src="https://flespi.io/covid19/statics/app-logo-128x128.png" class="center" alt="img" style="width:45px;height:45px;float: left;margin:-2px 5px">
@@ -37,32 +40,34 @@
 
 
 
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="#">Home</a>
-                </li>
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#">Home</a>
+            </li>
 
-                <li class="nav-item">
-                    <a class="nav-link" href="new_cases.html">New cases</a>
-                </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/new">New cases</a>
+            </li>
 
-                <li class="nav-item">
-                    <a class="nav-link" href="recovered.html">Recovered</a>
-                </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/recovered">Recovered</a>
+            </li>
 
-                <li class="nav-item">
-                    <a class="nav-link" href="dead.html">Dead</a>
-                </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/dead">Dead</a>
+            </li>
 
-            </ul>
+        </ul>
 
-            <form class="d-flex">
-                <input class="form-control me-2" id="myInput" type="search" placeholder="Search..." aria-label="Search">
-            </form>
+        <form class="d-flex">
+            <input class="form-control me-2" id="myInput" type="search" placeholder="Search..." aria-label="Search">
+        </form>
 
 
     </div>
-</nav>
+</nav>-->
+
+
 
 
 <div class="container">
@@ -117,8 +122,8 @@
     });
 </script>
 
-</body>
 
+</body>
 
 </html>
 
