--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,10 +1,12 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <div th:fragment="myNavBar">
+    <head>
+        <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/>
+    </head>
 
+<nav class="navbar navbar-expand-lg navbar-light">
 
-<nav class="navbar navbar-expand-lg navbar-light ">
-
-    <div class="container-fluid shadow p-3 mb-5 bg-white rounded" style="text-align:left;align-items: center; font-weight:bold;font-size:20px">
+    <div class="container-fluid shadow p-3 mb-5 bg-white rounded" data-spy="affix" data-offset-top="400" id="nav" style="text-align:left;align-items: center; font-weight:bold;font-size:20px">
         <img src="https://flespi.io/covid19/statics/app-logo-128x128.png" class="center" alt="img" style="width:45px;height:45px;float: left;margin:-2px 5px">
 
         <a class="navbar-brand" href="#">Coronavirus Tracker Application</a>
