--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -16,14 +16,14 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 
-
+    <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/>
+<!--    <script type="text/javascript" th:src="@{/jscript/main.js}"></script>-->
 
 </head>
 
 <body>
 
-<div th:insert="fragments/navbar.html::myNavBar"> </div>
-
+<div th:insert="fragments/navbar.html::myNavBar"></div>
 
 
 <div class="container">
