--- a/src/main/resources/templates/recovered.html
+++ b/src/main/resources/templates/recovered.html
@@ -23,7 +23,7 @@
 <body>
 
 <div th:insert="fragments/navbar.html::myNavBar"> </div>
-
+<div th:insert="fragments/button.html::myButton"></div>
 
 
 <div class="container">
