landing page incompelete

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -7,3 +7,19 @@
     top: 0;
     width: 100%
 }
+
+.panel-footer.panel-custom {
+    background: red;
+    color: #b60fe5;
+}
+
+
+
+
+
+
+
+
+
+
+
