--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -8,9 +8,20 @@
     width: 100%
 }
 
-.panel-footer.panel-custom {
+/*.panel-footer.panel-custom {
     background: red;
     color: #b60fe5;
+}*/
+
+.mydiv {
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    top:0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
 }
 
 
@@ -19,7 +30,63 @@
 
 
 
+/*.container {
+    margin-top: 100px
+}
 
+.imageselect .imagebox {
+    position: relative
+}
 
+.imageselect .imagebox figure {
+    position: relative;
+    overflow: hidden
+}
+
+.imageselect .imagebox figcaption {
+    background: rgba(45, 62, 82, 0.9);
+    position: absolute;
+    left: 10px;
+    right: 10px;
+    bottom: 10px;
+    padding: 20px;
+    -webkit-transform: translateY(140%);
+    -moz-transform: translateY(140%);
+    -ms-transform: translateY(140%);
+    -o-transform: translateY(140%);
+    transform: translateY(140%);
+    -moz-transition: -moz-transform 0.5s ease;
+    -o-transition: -o-transform 0.5s ease;
+    -webkit-transition: -webkit-transform 0.5s ease;
+    -ms-transition: -ms-transform 0.5s ease;
+    transition: transform 0.5s ease
+}
+
+.imageselect .imagebox .caption-title {
+    margin-bottom: 0;
+    color: #fff
+}
+
+.imageselect .imagebox .price {
+    color: #fdb714
+}
+
+.imageselect .imagebox:hover figcaption {
+    -webkit-transform: translateY(0);
+    -moz-transform: translateY(0);
+    -ms-transform: translateY(0);
+    -o-transform: translateY(0);
+    transform: translateY(0)
+}
+
+.price {
+    color: #f0715f;
+    font-size: 1.6667em;
+    text-transform: uppercase;
+    float: right;
+    text-align: right;
+    line-height: 1;
+    display: block
+}*/
 
 
