ui home under dev

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -24,104 +24,42 @@
     <link href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css'>
     <script src='https://stackpath.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.bundle.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
-    <!--
-        <style>
-            body, html {
-                height: 100%;
-                margin: 0;
-            }
-
-            .container {
-                position: relative;
-                width: 100%;
-            }
-
-            .image {
-                opacity: 1;
-                display: block;
-                width: 100%;
-                height: auto;
-                transition: .5s ease;
-                backface-visibility: hidden;
-            }
-
-            .middle {
-                transition: .5s ease;
-                opacity: 0;
-                position: absolute;
-                top: 50%;
-                left: 50%;
-                transform: translate(-50%, -50%);
-                -ms-transform: translate(-50%, -50%);
-                text-align: center;
-            }
-
-            .container:hover .image {
-                opacity: 0.3;
-            }
-
-            .container:hover .middle {
-                opacity: 1;
-            }
-
-            .text {
-                background-color: #d7bf9b;
-                color: white;
-                font-size: 16px;
-                padding: 6px 15px;
-                border-radius: 5px;
-            }
-        </style>-->
 
 </head>
+
 
 <body>
 
 <div th:insert="fragments/navbar.html::myNavBar"></div>
-<!--
-<div class="container">
-
-    <img src="https://external-preview.redd.it/SiiCZ3v_f6IHj4C5Eyi8EzZhcygX23cuZsRo2sYob6A.png?auto=webp&s=c8112bd8549501d12e127dd7dbca4f5e04c222dc"
-         alt="Avatar" class="image" style="width:100%">
-
-    <div class="middle">
-        <div class="text">This application lists the current number of cases reported across the globe.</div>
-    </div>
-
-</div>-->
-
-<!--<section id="content">
-    <div class="container">
-        <div id="main">
-            <div class="imageselect row add-clearfix image-imagebox">
-                <div class="col-sm-6">
-                    <article class="imagebox">
-                        <figure>
-
-                                <img src="https://external-preview.redd.it/SiiCZ3v_f6IHj4C5Eyi8EzZhcygX23cuZsRo2sYob6A.png?auto=webp&s=c8112bd8549501d12e127dd7dbca4f5e04c222dc" style="width:100%;height: 100%" alt="">
-
-                            <figcaption><span class="price"></span>
-                                <h2 class="caption-title">This application lists the current number of cases reported across the globe</h2>
-                            </figcaption>
-                        </figure>
-                    </article>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>-->
-
-
-<!------------------ Hover Effect Style : Demo - 3 --------------->
 
 
 <div class="box3">
-    <img src="https://external-preview.redd.it/SiiCZ3v_f6IHj4C5Eyi8EzZhcygX23cuZsRo2sYob6A.png?auto=webp&s=c8112bd8549501d12e127dd7dbca4f5e04c222dc">
+    <img src="https://www.plasticscm.com/images/art/wallpapers/plastic-wallpaper-stay-at-home-2-1280x800.png?v=GYDuKpIV58Ih3uLwl5wqqBvJjy4sC6PHQ9rCvsSjVSs">
     <div class="box-content">
-        <h3 class="title">Kristiana</h3>
-        <p class="description">
-            This application lists the current number of cases reported across the globe
+        <h3 class="title shape fw-bolder">Kristiana</h3>
+
+        <div class=" myParagraphWidth" >
+
+
+        <p class="description blockquote tinted-image" style="padding: 0 15px" >
+            Protect yourself and others by making these 6 simple precautions your new habits.
+            <br>
+            Clean your hands often.
+            <br>
+            Cough or sneeze in your bent elbow - not your hands.
+            <br>
+            Avoid touching your eyes, nose and mouth.
+            <br>
+            Limit social gatherings and time spent in crowded places.
+            <br>
+            Avoid close contact with someone who is sick.
+            <br>
+            Clean and disinfect frequently touched objects and surfaces.
+            <br>
+            <br>
+            This application lists the current number of cases reported across the globe.
         </p>
+        </div>
     </div>
 
 
@@ -131,6 +69,7 @@
 <footer class="bg-light text-center text-lg-start">
 
     <div class="text-center p-3" style="background-color: rgb(245,235,218)">
+
         <p class="fw-normal"> All information you see on this page is taken from this
             <a href="https://github.com/CSSEGISandData/COVID-19" target="_blank">repository</a> <!-- open tab when click on link target="_blank"-->
         </p>
