--- a/src/main/resources/static/css/hover_home.css
+++ b/src/main/resources/static/css/hover_home.css
@@ -1,3 +1,27 @@
+/*background big title home*/
+.shape {
+    text-align: center;
+    background: linear-gradient(65deg, transparent 50%, rgba(3, 78, 136, 0.7) 50%) left no-repeat,
+    linear-gradient(0deg, rgba(3, 78, 136, 0.7), rgba(3, 78, 136, 0.7)) 30px 0 no-repeat;
+
+    background-size: 30px 100%, 100% 100%;
+    width: 200px;
+    height: 60px;
+    line-height: 60px;
+    padding: 0 20px;
+    color: white;
+    margin: 20px auto;
+    position: relative;
+}
+
+.tinted-image {
+    background-image: linear-gradient(rgba(3, 78, 136, 0.7), rgba(3, 78, 136, 0.7))
+}
+.myParagraphWidth {
+    max-width: 50%;
+    border-radius: 10px;
+}
+
 
 
 /*********************** Demo - 3 *******************/
@@ -71,9 +95,9 @@
 }
 
 .box3 .title {
-    font-size: 24px;
+    font-size: 28px;
     font-weight: 600;
-    color: #88c425;
+    color: #fcfcfc;
     margin: 0 0 5px
 }
 
@@ -85,11 +109,10 @@
 }
 
 .box3 .description {
-    font-size: 14px;
-    color: #000000;
-    margin: 0 0 20px
+    font-size: 20px;
+    color: #ffffff;
+    margin-left: 26px;
 }
-
 
 
 @keyframes animate {
