--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -30,35 +30,35 @@
 
 <body>
 
-<div th:insert="fragments/navbar.html::myNavBar"></div>
+<div th:insert="fragments/navbar_without_searchbar.html::myNavBarWithoutSearchBar"></div>
 
 
 <div class="box3">
     <img src="https://www.plasticscm.com/images/art/wallpapers/plastic-wallpaper-stay-at-home-2-1280x800.png?v=GYDuKpIV58Ih3uLwl5wqqBvJjy4sC6PHQ9rCvsSjVSs">
     <div class="box-content">
-        <h3 class="title shape fw-bolder">Kristiana</h3>
+        <h3 class="title shape fw-bolder">Coronavirus Tracker Application</h3>
 
-        <div class=" myParagraphWidth" >
+        <div class=" myParagraphWidth">
 
 
-        <p class="description blockquote tinted-image" style="padding: 0 15px" >
-            Protect yourself and others by making these 6 simple precautions your new habits.
-            <br>
-            Clean your hands often.
-            <br>
-            Cough or sneeze in your bent elbow - not your hands.
-            <br>
-            Avoid touching your eyes, nose and mouth.
-            <br>
-            Limit social gatherings and time spent in crowded places.
-            <br>
-            Avoid close contact with someone who is sick.
-            <br>
-            Clean and disinfect frequently touched objects and surfaces.
-            <br>
-            <br>
-            This application lists the current number of cases reported across the globe.
-        </p>
+            <p class="description blockquote tinted-image" style="padding: 10px 15px">
+                Protect yourself and others by making these 6 simple precautions your new habits.
+                <br>
+                &bull; Clean your hands often.
+                <br>
+                &bull; Cough or sneeze in your bent elbow - not your hands.
+                <br>
+                &bull; Avoid touching your eyes, nose and mouth.
+                <br>
+                &bull; Limit social gatherings and time spent in crowded places.
+                <br>
+                &bull; Avoid close contact with someone who is sick.
+                <br>
+                &bull; Clean and disinfect frequently touched objects and surfaces.
+                <br>
+                <br>
+                This application lists the current number of new cases,recovered and dead reported across the globe.
+            </p>
         </div>
     </div>
 
