--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,8 +7,7 @@
           integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
--->
+
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/creativetimofficial/tailwind-starter-kit/tailwind.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -34,12 +33,11 @@
 
 
 <div class="box3">
-    <img src="https://www.plasticscm.com/images/art/wallpapers/plastic-wallpaper-stay-at-home-2-1280x800.png?v=GYDuKpIV58Ih3uLwl5wqqBvJjy4sC6PHQ9rCvsSjVSs">
+    <img src="../static/images/stay_home.png" th:src="@{images/stay_home.png}" style="max-width: 100%">
     <div class="box-content">
         <h3 class="title shape fw-bolder">Coronavirus Tracker Application</h3>
 
         <div class=" myParagraphWidth">
-
 
             <p class="description blockquote tinted-image" style="padding: 10px 15px">
                 Protect yourself and others by making these 6 simple precautions your new habits.
@@ -68,7 +66,7 @@
 
 <footer class="bg-light text-center text-lg-start">
 
-    <div class="text-center p-3" style="background-color: rgb(245,235,218)">
+    <div class="text-center p-3" style="background-color: rgb(227,227,227)">
 
         <p class="fw-normal"> All information you see on this page is taken from this
             <a href="https://github.com/CSSEGISandData/COVID-19" target="_blank">repository</a> <!-- open tab when click on link target="_blank"-->
