--- a/src/main/resources/templates/recovered.html
+++ b/src/main/resources/templates/recovered.html
@@ -29,23 +29,16 @@
 <div class="container">
 
 
-    <p class="fw-normal">This application lists the current number of cases reported across the globe.</p>
-
-    <p class="fw-light"> All information you see on this page is taken from this repository
-        <a href="https://github.com/CSSEGISandData/COVID-19" target="_blank">Link</a> <!-- open tab when click on link target="_blank"-->
-    </p>
-
-
     <div class="alert alert-success" role="alert">
-        <h1 class="display-4" th:text="${totalReportedCases}"></h1>
+        <h1 class="display-4" th:text="${totalReportedRecovered}"></h1>
         <hr>
-        <p class="mb-0">Total cases reported as of today.</p>
+        <p class="mb-0">Total recovered reported as of today.</p>
     </div>
 
 
     <div class="alert alert-warning" role="alert">
-        <span>New Cases reported since previous day</span>
-        <span th:text="${totalNewCases}"></span>
+        <span>New cases that recovered since previous day</span>
+        <span th:text="${totalRecoveredToday}"></span>
     </div>
 
 
@@ -53,8 +46,8 @@
         <tr>
             <th>State</th>
             <th>Country</th>
-            <th>Total cases reported</th>
-            <th>Changes since last day</th>
+            <th>Total cases recovered</th>
+            <th>Recovered since last day</th>
         </tr>
         <tbody id="myTable">
         <tr th:each="locationStat : ${locationStats}">
