--- a/src/main/resources/templates/recovered.html
+++ b/src/main/resources/templates/recovered.html
@@ -36,7 +36,7 @@
     </div>
 
 
-    <div class="alert alert-warning" role="alert">
+    <div class="alert alert-primary" role="alert">
         <span>New cases that recovered since previous day</span>
         <span th:text="${totalRecoveredToday}"></span>
     </div>
