--- a/src/main/resources/templates/cases.html
+++ b/src/main/resources/templates/cases.html
@@ -30,7 +30,7 @@
 
 
 
-    <div class="alert alert-success" role="alert">
+    <div class="alert alert-secondary" role="alert">
         <h1 class="display-4" th:text="${totalReportedCases}"></h1>
         <hr>
         <p class="mb-0">Total cases reported as of today.</p>
