--- a/src/main/resources/templates/dead.html
+++ b/src/main/resources/templates/dead.html
@@ -28,7 +28,7 @@
 <div class="container">
 
 
-    <div class="alert alert-success" role="alert">
+    <div class="alert alert-secondary" role="alert">
         <h1 class="display-4" th:text="${totalReportedDead}"></h1>
         <hr>
         <p class="mb-0">Total cases dead as of today.</p>
