--- a/src/main/resources/templates/fragments/navbar_without_searchbar.html
+++ b/src/main/resources/templates/fragments/navbar_without_searchbar.html
@@ -7,8 +7,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light" style=" margin-bottom: 0;">
 
-        <div class="container-fluid shadow p-3 mb-5 bg-white rounded" data-spy="affix" data-offset-top="400" id="nav"
-             style="text-align:left;align-items: center; font-weight:bold;font-size:20px">
+        <div class="container-fluid shadow p-3   bg-white rounded" data-spy="affix" data-offset-top="400" id="nav" style="text-align:left;align-items: center; font-weight:bold;font-size:20px">
             <img src="https://flespi.io/covid19/statics/app-logo-128x128.png" class="center" alt="img" style="width:45px;height:45px;float: left;margin:-2px 5px">
 
             <a class="navbar-brand" href="#">Coronavirus Tracker Application</a>
@@ -20,7 +19,7 @@
             </button>
 
 
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <ul class="navbar-nav me-auto mb-lg">
                 <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="/">Home</a>
                 </li>
