--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -9,7 +9,7 @@
     <div class="container-fluid shadow p-3 mb-5 bg-white rounded " data-spy="affix" data-offset-top="400" id="nav" style="text-align:left;align-items: center; font-weight:bold;font-size:20px">
         <img src="https://flespi.io/covid19/statics/app-logo-128x128.png" class="center" alt="img" style="width:45px;height:45px;float: left;margin:-2px 5px">
 
-        <a class="navbar-brand" href="#">Coronavirus Tracker Application</a>
+        <a class="navbar-brand" href="/">Coronavirus Tracker Application</a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
