--- a/src/main/resources/templates/cases.html
+++ b/src/main/resources/templates/cases.html
@@ -29,7 +29,6 @@
 <div class="container">
 
 
-
     <div class="alert alert-secondary" role="alert">
         <h1 class="display-4" th:text="${totalReportedCases}"></h1>
         <hr>
@@ -43,13 +42,15 @@
     </div>
 
 
-    <table class="table">
+    <table class="table table-hover">
+        <thead>
         <tr>
             <th>State</th>
             <th>Country</th>
             <th>Total cases reported</th>
             <th>Changes since last day</th>
         </tr>
+        </thead>
         <tbody id="myTable">
         <tr th:each="locationStat : ${locationStats}">
             <td th:text="${locationStat.state}"></td>
