some texts changed

--- a/src/main/resources/templates/recovered.html
+++ b/src/main/resources/templates/recovered.html
@@ -37,7 +37,7 @@
 
 
     <div class="alert alert-primary" role="alert">
-        <span>New cases that recovered since previous day</span>
+        <span>Recovered cases that reported since previous day</span>
         <span th:text="${totalRecoveredToday}"></span>
     </div>
 
