--- a/src/main/resources/templates/cases.html
+++ b/src/main/resources/templates/cases.html
@@ -37,7 +37,7 @@
 
 
     <div class="alert alert-warning" role="alert">
-        <span>New Cases reported since previous day</span>
+        <span>New cases that reported since previous day</span>
         <span th:text="${totalNewCases}"></span>
     </div>
 
