--- a/src/main/resources/templates/dead.html
+++ b/src/main/resources/templates/dead.html
@@ -16,7 +16,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 
-
+    <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/>
 </head>
 
 <body>
@@ -25,7 +25,7 @@
 <div th:insert="fragments/button.html::myButton"></div>
 
 
-<div class="container">
+<div class="container" style="margin-top: 80px">
 
 
     <div class="alert alert-secondary" role="alert">
