--- a/src/main/resources/templates/recovered.html
+++ b/src/main/resources/templates/recovered.html
@@ -17,7 +17,7 @@
             integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 
 
-
+    <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/>
 </head>
 
 <body>
@@ -26,7 +26,7 @@
 <div th:insert="fragments/button.html::myButton"></div>
 
 
-<div class="container">
+<div class="container" style="margin-top: 80px">
 
 
     <div class="alert alert-secondary" role="alert">
